fix(ColorFab): Fix truncated circle in small size

--- a/src/component/color-selector/color-fab.component.scss
+++ b/src/component/color-selector/color-fab.component.scss
@@ -9,9 +9,9 @@
     justify-content: space-around;
     margin: 0.45rem;
     &[small] {
-        width: 1.6rem;
-        height: 1.6rem;
-        margin: 0.35rem;
+        width: 1.65rem;
+        height: 1.65rem;
+        margin: 0.3rem;
     }
     &[active] {
         transform: scale(1.4, 1.4);
